Upload new code - load solutions

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,13 +1,4 @@
-<!-- Header label area -->
-<div class="header-panel shadow-z-2-banner">
-    <img class="header-image" src="./img/banner-background.svg">
-    <div class="page-container">
-        <h1><span class="hideItem">IBM Cloud Samples, IBM Cloud Tutorials, IBM Cloud GitHub Apps</span> IBM Cloud Featured Samples</h1>
-    </div>
-</div>
-
-
-<!-- Filter Area-->
+<!-- Search -->
 <div class="header-panel shadow-z-2-filter">
     <div class="page-container">
         <div class="filter-row">
@@ -15,284 +6,78 @@
             <div class="fil">
                 <form role="search">
                     <div class="form-group search-input">
-                        <input type="text" class="form-control" placeholder="Search by language, service or industry..."
-                               ng-model="searchTextData">
+                        <input type="text" class="form-control" placeholder="Search by solutions tutorials or services" ng-model="searchTextData">
                     </div>
                 </form>
             </div>
-
-            <div class="filterAreaDiv">
-                <div class='bx--select'>
-                    <select id="sortBy" ng-model="tagP.sort" class="form-sorting">
-                        <option value="" analytics-on="click" analytics-event="Sort by: All">Sort by: All</option>
-                        <option value="Most Viewed" analytics-on="click" analytics-event="Sort by: Most Viewed">Most
-                            Viewed
-                        </option>
-                        <option value="Recently Added" analytics-on="click" analytics-event="Sort by: Recently Added">
-                            Recently Added
-                        </option>
-                    </select>
-                </div>
-
-                <div class="ser filter" ng-click="clickToView = !clickToView">
-                    <form role="search">
-                        <div class="filterButton" id="filterButton">
-                            <span> Filter </span>
-                            <svg class="filter-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    viewBox="0 0 16.8 13.9" enable-background="new 0 0 16.8 13.9" xml:space="preserve">
-                    <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#3D70B2" points="4,0 0,4.6 2.7,4.6 2.7,13.9 5.3,13.9 5.3,4.6 8,4.6 "/>
-                    <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#3D70B2" points="12.8,13.9 16.8,9.2 14.1,9.2 14.1,0 11.4,0 11.4,9.2
-                    8.8,9.2 "/>
-                  </svg>
-                        </div>
-                    </form>
-                </div>
-            </div>
-
         </div>
     </div>
+    <span class="project-content_description">
+            Learn how to build, deploy and scale real-world solutions on IBM Cloud. These guides provide step-by-step instructions on how to use IBM Cloud to implement common patterns based on best practices and proven technologies.
+    </span>
 </div>
 
+<!-- Solutions -->
+<div class="page-container main outer solutions" ng-repeat="categoryGroups in groups | filter:searchTextData">
 
-<div class="page-container">
-    <div class="dropdown content-area sample-show-hide" id="filterDropdown" ng-show="clickToView">
-        <div class="inside filter-category">
-            <span class="filter-text">LANGUAGES:</span><br/>
-            <div class="language search-body">
-                <table>
-                    <tr>
-                        <button type="button" data-track-action="Filter" data-track-label="Python"
-                                class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Python')">
-                            Python
-                        </button>
-                        <button type="button" data-track-action="Filter" data-track-label="NodeJS"
-                                class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('NodeJS')">
-                            NodeJS
-                        </button>
-                        <button type="button" data-track-action="Filter" data-track-label="Java"
-                                class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Java')">Java
-                        </button>
-                        <button type="button" data-track-action="Filter" data-track-label="Swift"
-                                class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Swift')">
-                            Swift
-                        </button>
-                        <button type="button" data-track-action="Filter" data-track-label="Android"
-                                class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Android')">
-                            Android
-                        </button>
-                        <button type="button" data-track-action="Filter" data-track-label="Hybrid"
-                                class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Hybrid')">
-                            Hybrid
-                        </button>
-                    </tr>
-                </table>
-            </div>
-        </div>
-
-        <div class="inside01">
-            <span class="filter-text">CATEGORIES:</span>
-            <div class="category search-body">
-                <table>
-                    <tr>
-                        <button type="button" data-track-action="Filter" data-track-label="IoT"
-                                class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('IoT')">IoT
-                        </button>
-                        <button type="button" data-track-action="Filter" data-track-label="Web"
-                                class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('Web')">Web
-                        </button>
-                        <button type="button" data-track-action="Filter" data-track-label="Mobile"
-                                class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('Mobile')">
-                            Mobile
-                        </button>
-                        <button type="button" data-track-action="Filter" data-track-label="Watson"
-                                class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('Watson')">
-                            Watson
-                        </button>
-                        <button type="button" data-track-action="Filter" data-track-label="Serverless"
-                                class="tagFilter btn btn-sm" data-toggle="button"
-                                ng-click="toggleCategory('Serverless')">
-                            Serverless
-                        </button>
-                        <button type="button" data-track-action="Filter" data-track-label="Kubernetes"
-                                class="tagFilter btn btn-sm" data-toggle="button"
-                                ng-click="toggleCategory('Kubernetes')">
-                            Kubernetes
-                        </button>
-
-                    </tr>
-                </table>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-
-<div class="page-container">
-    <div class="dropdown2 content-area sample-show-hide">
-        <div class="inside filter-category">
-            <div class="language search-body">
-                <span class="filter-text">FILTERS:</span>
-                <table>
-                    <tr>
-                        <span ng-show="{{tagP.languages !== ''}}">
-                            <button  type="button" data-track-action="Filter" data-track-label="Python"
-                                     class="tagFilter btn btn-sm" data-toggle="button">
-
-                                <span ng-repeat="item in tagP.languages">
-                                    <span class=" ">{{item || '&nbsp;'}}{{$last ? '' : ','}}</span>
-                                </span>
-
-                            </button>
-                        </span>
-
-                        <span ng-show="{{tagP.categories !== ''}}">
-                            <button  type="button" data-track-action="Filter" data-track-label="Python"
-                                     class="tagFilter btn btn-sm 2nd" data-toggle="button">
-
-                                <span ng-repeat="item in tagP.categories">
-                                    <span class=" ">{{item || '&nbsp;'}}{{$last ? '' : ','}}</span>
-                                </span>
-                            </button>
-                        </span>
-
-                        <button type="button" class="tagFilter btn btn-sm clearAll" data-toggle="button" ng-click="toggleLanguage('NodeJS')">
-                            X Clear All
-                        </button>
-                    </tr>
-                </table>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-
-
-<div class="page-container main outer">
     <div class="TotHome">
-        <span ng-if="samples.length === filteredLinks.length">Displaying <b>{{samples.length}}</b> featured samples.</span>
-        <span ng-if="filteredLinks.length != samples.length">Displaying <b>{{filteredLinks.length}}</b> code samples matching your criteria.</span>
+        <span class="leftHeaderLabel">
+            <span class="headerPanelL">
+                {{categoryGroups.name}}
+            </span>
+
+            <!-- <a href="./#!/solutions" class="allButton">
+                All
+                <img src="icons/goto.svg" alt="All on solutions">
+            </a> -->
+        </span>
+
     </div>
+    <main class="content">
+        <div class="card__content">
+            <ul class="items-wrapper solutions">
+                <!-- START FULL PAGE -->
+                <div class="resources__wrapper" ng-scrollable="{events:'emit',id:1}">
+                    <li class="inside project-item slide-animation" ng-repeat="sample in categoryGroups.solutions | filter:searchTextData">
+                        <div class="project-outer solutions" ng-class="{{sample.count}}">
+                            <!-- tracking sample links -->
+                            <div class="link-title">
+                                <a id="demoID" href="https://console.bluemix.net/docs/tutorials/{{sample.url}}" target="_blank">{{sample.name}}</a>
+                            </div>
+                            <div class="project-content description">
+                                <span>{{sample.description}}</span>
+                            </div>
 
-    <ul class="items-wrapper"><!-- START FULL PAGE -->
-        <li class="inside project-item slide-animation"
-            ng-repeat="sample in ( filteredLinks = ( samples | filter:searchTextData | filter:tagP.sort | samplesFilter:tagP ))">
+                            <div class="project-content tag-group">
+                                <div class="tag-holder">
+                                    <span ng-repeat="sampleTag in sample.tags">
+                                            <span class="tag-filter language" ng-class="LanChecked" id="" >{{sampleTag}}</span>
+                                    </span>
+                                </div>
+                            </div>
 
-            <div class="project-outer" ng-class="{demo: sample.tags.indexOf('demo')>=0}">
-                <!-- tracking sample links -->
-                <div class="link-title">
-                    <a id="demoID" data-track-action="sample-title" data-track-label="{{sample.urlLink}}"
-                       href="{{sample.url}}" target="_blank" analytics-on="click" analytics-name="Visited Repo Content"
-                       analytics-referrer="Visited Repo Content" analytics-event="Sample Title: {{sample.name}}">{{sample.name}}</a>
-                    <a href="{{sample.homepage}}" ng-if="sample.homepage"> <span class="e1a-sample e1a-sm"></span></a>
+                            <div class="solutionImageDIV">
+                                <span class="solutionImageDIVspan">
+                                    <img class="architectureDiagram" src="https://console.bluemix.net/docs/api/content/tutorials/{{sample.imgSrc}}?lang=en-US"> 
+                                </span>
+                            </div>
+                        </div>
+                        <meta name="description" content="{{sample.search}}">
+                        <div class="tag-level solutions">
+                            <span class="project-link">Last updated: {{sample.lastUpdated}}</span>
+
+                            <span ng-show="{{sample.urlLink !== ''}}" class="project-link demo">
+                                <a id="LiveDemo" href="https://console.bluemix.net/docs/tutorials/{{sample.url}}" class="hrefLink" target="_blank">View Solution</a>
+                            </span>
+
+                        </div>
+
+                    </li>
                 </div>
-                <div class="project-content description">
-                    <span>{{sample.description}}</span>
-                </div>
-
-                <div class="project-content tag-group">
-
-                    <div class="tag-holder">
-                        <span class="FirSpanLeft">LANGUAGES: </span>
-                        <span ng-repeat="item in sample.language">
-                <span class="tag-filter language" ng-class="LanChecked" id="">{{item}}</span>
-
-
-              </span>
-                    </div>
-
-                    <span class="FirSpanLeft">CATEGORY: </span>
-                    <div class="tag-holder">
-                <span ng-repeat="item in sample.category">
-                  <span class="tag-filter category" ng-class="CatChecked">{{item}}</span>
-                </span>
-                    </div>
-
-                    <span class="FirSpanLeft">SERVICES: </span>
-                    <div class="tag-services">
-              <span ng-repeat="item in sample.services">
-                <span class="services ">{{item || '&nbsp;'}}{{$last ? '' : ','}}</span>
-              </span>
-                    </div>
-                </div>
-            </div>
-            <meta name="description" content="{{sample.search}}">
-
-
-            <div class="tag-level">
-
-
-                <span ng-show="{{sample.blogPost !== ''}}" class="project-link">
-                    <a id="BlogPost" data-track-action="sample-blog" data-track-label="{{sample.blogPost}}"
-                       href="{{sample.blogPost}}" class="hrefLink" target="_blank" analytics-on="click"
-                       analytics-name="Viewed Blog Post" analytics-referrer="Viewed Blog Post"
-                       analytics-event="Blog Post: {{sample.name}}">
-                        <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1"
-                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <title>blog</title>
-                            <desc>Created with Sketch.</desc>
-                            <defs></defs>
-                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                <g id="blog" fill-rule="nonzero" fill="#4178BE">
-                                    <g id="blog_24" transform="translate(2.000000, 2.000000)">
-                                        <g id="Layer_1">
-                                            <g id="Group">
-                                                <g id="Shape">
-                                                    <polygon
-                                                            points="14.5454545 7.27272727 12.7272727 7.27272727 13.6363636 4.54545455 11.8181818 4.54545455 10.9090909 7.27272727 10.9090909 10.9090909 14.5454545 10.9090909"></polygon>
-                                                    <polygon
-                                                            points="9.09090909 7.27272727 7.27272727 7.27272727 8.18181818 4.54545455 6.36363636 4.54545455 5.45454545 7.27272727 5.45454545 10.9090909 9.09090909 10.9090909"></polygon>
-                                                    <path d="M0,0 L0,15.3845455 L4.61545455,20 L20,20 L20,0 L0,0 Z M18.1818182,18.1818182 L5.45454545,18.1818182 L5.45454545,14.5454545 L1.81818182,14.5454545 L1.81818182,1.81818182 L18.1818182,1.81818182 L18.1818182,18.1818182 Z"></path>
-                                                </g>
-                                            </g>
-                                        </g>
-                                    </g>
-                                </g>
-                            </g>
-                        </svg>
-                    </a>
-                </span>
-
-                <span ng-show="{{sample.urlVideo !== ''}}" class="project-link">
-                    <a id="LiveVideo" data-track-action="sample-video" data-track-label="{{sample.urlVideo}}"
-                       href="{{sample.urlVideo}}" class="hrefLink" target="_blank" analytics-on="click"
-                       analytics-name="Viewed Video" analytics-referrer="Viewed Video"
-                       analytics-event="View Video: {{sample.name}}">
-                        <svg width="27px" height="26px" viewBox="0 0 27 22" version="1.1"
-                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <!-- Generator: Sketch 42 (36781) - http://www.bohemiancoding.com/sketch -->
-                            <title>video</title>
-                            <desc>Created with Sketch.</desc>
-                            <defs></defs>
-                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                <g id="video" fill-rule="nonzero" fill="#4178BE">
-                                    <g id="video_32" transform="translate(1.000000, 1.000000)">
-                                        <g id="Layer_1">
-                                            <g id="Group">
-                                                <polygon id="Shape"
-                                                         points="9.16666667 7.5 9.16666667 15.8333333 17.5 11.6666667"></polygon>
-                                                <path d="M0,0 L0,3.33333333 L0,20 L25,20 L25,3.33333333 L25,0 L0,0 Z M23.3333333,18.3333333 L1.66666667,18.3333333 L1.66666667,5 L23.3333333,5 L23.3333333,18.3333333 Z"
-                                                      id="Shape"></path>
-                                            </g>
-                                        </g>
-                                    </g>
-                                </g>
-                            </g>
-                        </svg>
-                    </a>
-                </span>
-
-                <span ng-show="{{sample.urlLink !== ''}}" class="project-link demo">
-                    <a id="LiveDemo" data-track-action="sample-demo" data-track-label="{{sample.urlLink}}"
-                       href="{{sample.urlLink}}" class="hrefLink" target="_blank" analytics-on="click"
-                       analytics-name="Viewed Live Demo" analytics-referrer="Viewed Live Demo"
-                       analytics-event="Live Demo: {{sample.name}}">Demo</a>
-                </span>
-
-            </div>
-
-        </li>
-    </ul>
-
+            </ul>
+        </div>
+    </main>
 </div>
+
+<br>
+<br>
