--- a/app/views/home.html
+++ b/app/views/home.html
@@ -42,7 +42,7 @@
                         <div class="project-outer solutions" ng-class="{{sample.count}}">
                             <!-- tracking sample links -->
                             <div class="link-title">
-                                <a id="demoID" href="https://console.bluemix.net/docs/tutorials/{{sample.url}}" target="_blank">{{sample.name}}</a>
+                                <a id="demoID" href="https://cloud.ibm.com/docs/tutorials/{{sample.url}}" target="_blank">{{sample.name}}</a>
                             </div>
                             <div class="project-content description">
                                 <span>{{sample.description}}</span>
@@ -58,7 +58,7 @@
 
                             <div class="solutionImageDIV">
                                 <span class="solutionImageDIVspan">
-                                    <img class="architectureDiagram" src="https://console.bluemix.net/docs/api/content/tutorials/{{sample.imgSrc}}?lang=en-US"> 
+                                    <img class="architectureDiagram" src="https://cloud.ibm.com/docs/api/content/tutorials/{{sample.imgSrc}}?lang=en-US"> 
                                 </span>
                             </div>
                         </div>
@@ -67,7 +67,7 @@
                             <span class="project-link">Last updated: {{sample.lastUpdated}}</span>
 
                             <span ng-show="{{sample.urlLink !== ''}}" class="project-link demo">
-                                <a id="LiveDemo" href="https://console.bluemix.net/docs/tutorials/{{sample.url}}" class="hrefLink" target="_blank">View Solution</a>
+                                <a id="LiveDemo" href="https://cloud.ibm.com/docs/tutorials/{{sample.url}}" class="hrefLink" target="_blank">View Solution</a>
                             </span>
 
                         </div>
